--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -130,23 +130,21 @@ legend {
 
 /* Welcome page */
 
-.welcomeBack {
-  margin-top: 15vh;
+.welcomeBack,
+.welcomeBox {
+  margin-top: 2em;
 }
 
-.welcomeBox {
-  text-align: center;
-  padding: 4em;
-  margin: 2em;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+.welcome-alt-text {
+  color: rgba(28, 62, 87, 0.65);
+  margin: 0.5em 0 2em;
 }
 
 .start-form {
   font-size: 1.25em;
   text-align: left;
   display: block;
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
 }
 
 .start-form strong,
@@ -156,11 +154,7 @@ legend {
 
 .start-form span {
   color: rgba(28, 62, 87, 0.65);
-  font-size: 0.875em;
-}
-
-.forms a.btn {
-  margin-bottom: 3px;
+  font-size: 0.75em;
 }
 
 .text-muted {
