Refactor file input

--- a/public/assets/css/form-base.css
+++ b/public/assets/css/form-base.css
@@ -150,6 +150,12 @@ textarea {
 	}
 }
 
+/* Custom filename */
+
+.file-custom::after {
+  content: attr(data-filename);
+}
+
 /* Hacks */
 
 /* Add a cursor to .form-section-nav elements */
