--- a/public/assets/sass/form-preview.scss
+++ b/public/assets/sass/form-preview.scss
@@ -1,22 +1,20 @@
-@import 'variables';
+@import 'sf-design-system/design-tokens/colors';
+@import 'sf-design-system/design-tokens/breakpoints';
+@import 'sf-design-system/design-tokens/typography-mixins';
+@import 'sf-design-system/design-tokens/mixins';
+@import 'sf-design-system/design-tokens/variables';
+
 
 body {
   background: $white;
 }
 
 #SFDSWF-Container {
-  padding: 2em 5em;
+  padding: 1rem;
 }
 
-#SFDSWFB-legend {
-  position: relative !important;
-  height: auto;
-  width: auto;
-  font-size: 3em;
-}
-
-.form-group {
-  position: relative;
+.hero-banner {
+  padding-top: 0 !important;
 }
 
 .is-selected-in-editor {
@@ -24,7 +22,7 @@ body {
     position: absolute;
     background: rgba($blue-2, 0.4);
     border: 2px solid rgba($blue-2, 0.6);
-    border-radius: 4px;
+    border-radius: $radius;
     content: "";
     top: -1rem;
     bottom: -1rem;
