update path for sass import

--- a/public/assets/sass/form-preview.scss
+++ b/public/assets/sass/form-preview.scss
@@ -1,8 +1,8 @@
-@import 'sf-design-system/design-tokens/colors';
-@import 'sf-design-system/design-tokens/breakpoints';
-@import 'sf-design-system/design-tokens/typography-mixins';
-@import 'sf-design-system/design-tokens/mixins';
-@import 'sf-design-system/design-tokens/variables';
+@import './sf-design-system/design-tokens/colors';
+@import './sf-design-system/design-tokens/breakpoints';
+@import './sf-design-system/design-tokens/typography-mixins';
+@import './sf-design-system/design-tokens/mixins';
+@import './sf-design-system/design-tokens/variables';
 
 
 body {
