Style conditionals, always show “all / any” drpdwn

--- a/public/assets/sass/editor.scss
+++ b/public/assets/sass/editor.scss
@@ -352,6 +352,17 @@ legend {
   }
 }
 
+.firstConditional,
+.multipleConditional {
+  margin-bottom: 0.5rem;
+
+  span {
+    display: inline-block;
+    height: 34px;
+    padding: 6px;
+  }
+}
+
 .addConditional {
   padding-top: 1em;
 }
