--- a/public/assets/sass/editor.scss
+++ b/public/assets/sass/editor.scss
@@ -279,7 +279,7 @@ legend {
   margin-bottom: 1em;
 
   .help-block {
-    font-size: 0.875em;
+    font-size: 0.93em;
   }
 
   .form-control {
@@ -295,6 +295,10 @@ legend {
     width: 45%;
     margin-right: 5%;
   }
+}
+
+.accordion-markup {
+  margin-bottom: 5rem;
 }
 
 .popover {
@@ -327,28 +331,40 @@ legend {
 
 .fa-minus-circle.conditionIcon {
   position: absolute;
-  right: -1.2em;
+  right: -1.4em;
   font-size: 1.5em;
-  color: #eee;
+  color: #777;
   cursor: pointer;
 
   &:hover {
-    color: #aaa;
+    color: #555;
   }
 }
 
 .condition,
 .calculation {
   position: relative;
-  border-bottom: 1px solid transparent;
+  padding: 1rem;
+  margin: 1rem 0;
+  background: #f7f7f7;
+  border: 1px solid #eee;
+  border-radius: $radius;
 
-  &:hover {
-    border-bottom: 1px solid $black;
+  .form-control {
+    margin-bottom: 0.5rem;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
+.firstCalculation {
+  margin-bottom: 0.5em;
+}
+
 .conditional,
-.addCalculationContainer {
+.calculationContainer {
   width: 90%;
   select,
   input {
@@ -365,14 +381,6 @@ legend {
     height: 34px;
     padding: 6px;
   }
-}
-
-.addConditional {
-  padding-top: 1em;
-}
-
-.addCalculation {
-  padding-top: 1em;
 }
 
 hr.and::before {
@@ -492,11 +500,13 @@ $editorHeight: calc(100vh - 4rem);
 }
 
 .save-buttons {
-  position: sticky;
+  position: fixed;
   bottom: 0;
   background: #fff;
   box-shadow: 0 -1px 3px rgba($black, 0.2);
-  padding: 0.5rem 0;
+  padding: 0.5rem;
+  width: calc(20% - 1px);
+  left: 20%;
 }
 
 .leftPanel,
