--- a/public/assets/sass/editor.scss
+++ b/public/assets/sass/editor.scss
@@ -760,7 +760,7 @@ $editorHeight: calc(100vh - 4rem);
 }
 
 .field-item-group {
-  padding: 1.5rem;
+  padding: 0.5rem 0;
   display: block;
   border-bottom: 3px solid rgba($slate-blue, 0.3);
 }
@@ -785,18 +785,19 @@ $formTypes: "c04",
 
 .field-item {
   text-align: left;
-  margin: 0 0.5rem 1rem 0;
   border: 0;
-  background: transparent;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: 1.5rem center;
   color: $bright-blue;
   cursor: pointer;
   display: block;
-  padding-left: 2.5rem;
-  background: $white;
+  padding: 0.625rem 0.5rem 0.625rem 4.5rem;
+  width: calc(100% - 1px);
 
   @each $type in $formTypes {
     &[data-formtype="#{$type}"] {
-      background: transparent url('assets/images/field-#{$type}.svg') left center no-repeat;
+      background-image: url('assets/images/field-#{$type}.svg');
     }
   }
 
@@ -805,8 +806,7 @@ $formTypes: "c04",
   }
 
   &:hover {
-    color: black;
-    border-color: black;
+    background-color: rgba($bright-blue, 0.1);
   }
 
 }
