Add name and hidden icons

--- a/public/assets/sass/editor.scss
+++ b/public/assets/sass/editor.scss
@@ -765,7 +765,8 @@ $editorHeight: calc(100vh - 4rem);
   border-bottom: 3px solid rgba($slate-blue, 0.3);
 }
 
-$formTypes: "c04",
+$formTypes: "c02",
+            "c04",
             "c06",
             "c08",
             "d02",
@@ -777,6 +778,7 @@ $formTypes: "c04",
             "i14",
             "m02",
             "m08",
+            "m11",
             "m13",
             "m16",
             "s02",
