--- a/public/assets/sass/form-branding.scss
+++ b/public/assets/sass/form-branding.scss
@@ -6,6 +6,7 @@
 @import 'sf-design-system/design-tokens/typography';
 @import 'sf-design-system/design-tokens/mixins';
 @import 'sf-design-system/design-tokens/variables';
+@import 'sf-design-system/design-tokens/functions';
 @import 'sf-design-system/design-tokens/base';
 
 @import 'sf-design-system/layout/hero-banner';
