--- a/public/assets/css/dropzone.css
+++ b/public/assets/css/dropzone.css
@@ -385,11 +385,11 @@
         left: 0;
         bottom: 0;
         width: 0;
-        -webkit-transition: width 300ms ease-in-out;
-        -moz-transition: width 300ms ease-in-out;
-        -ms-transition: width 300ms ease-in-out;
-        -o-transition: width 300ms ease-in-out;
-        transition: width 300ms ease-in-out; }
+        -webkit-transition: width 0.3s ease-in-out;
+        -moz-transition: width 0.3s ease-in-out;
+        -ms-transition: width 0.3s ease-in-out;
+        -o-transition: width 0.3s ease-in-out;
+        transition: width 0.3s ease-in-out; }
     .file-custom .dz-preview.dz-error .dz-error-message {
       display: block; }
     .file-custom .dz-preview.dz-error:hover .dz-error-message {
