DFB-774 add dropzone.css to form-branding

--- a/public/assets/sass/form-branding.scss
+++ b/public/assets/sass/form-branding.scss
@@ -13,6 +13,8 @@
 @import 'sf-design-system/forms/form-fields';
 @import 'sf-design-system/forms/pagination';
 
+@import url('dropzone.css');
+
 .form-content {
   @include contain-1090;
 }
