--- a/public/assets/sass/form-branding.scss
+++ b/public/assets/sass/form-branding.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500&display=swap');
+@import url('/assets/css/dropzone.css');
 
 @import 'sf-design-system/design-tokens/colors';
 @import 'sf-design-system/design-tokens/breakpoints';
@@ -12,8 +13,6 @@
 @import 'sf-design-system/layout/hero-banner';
 @import 'sf-design-system/forms/form-fields';
 @import 'sf-design-system/forms/pagination';
-
-@import url('dropzone.css');
 
 .form-content {
   @include contain-1090;
